k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pravi-ai
  labels:
    name: pravi-ai
    app: pravi-ai
